# my-music-clip-ns18

./: .gitignore  CMakeLists.txt  README.md  wsjcpp.yml
img/: background.xcf  ns18zoid.xcf  ns18zoid_blue.xcf  ns18zoid_green.xcf  ns18zoid_red.xcf
src/: main.cpp  main_controller.cpp  main_controller.h
src.wsjcpp/: CMakeLists.txt
src/game/: coordxy.cpp  coordxy.h  game_state.cpp  game_state.h  state_background.cpp  state_background.h  state_ns18zoid.cpp  state_ns18zoid.h
src/render/: render.cpp  render.h  render_background.cpp  render_background.h  render_base.h  render_ns18zoid.cpp  render_ns18zoid.h  render_window.cpp  render_window.h
